--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,14 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-sweetalert2": "^0.6.0",
+    "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
+    "sweetalert2": "^11.14.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
